# falafel-private

./: .gitignore  README.md  pyproject.toml  requirements.txt  settings.sh
dev/: Makefile  dev_log.md  falafel.sv  falafel_config_regs.sv  falafel_core.sv  falafel_input_arbiter.sv  falafel_input_buffer.sv  falafel_input_parser.sv  falafel_lsu.sv  falafel_output_fsm.sv  falafel_pkg.sv  falafel_wrapper.sv  free_list.py  lsu_wrapper.sv  mem_rsp.py  monitor.py  test_core.py  test_falafel.py  test_falafel_wrapper.py
dev/test-deprecated/: core_wrapper.sv  lsu_wrapper.sv  test_lsu.py
doc/: README.md  doc.md  documents.md  dump_241205.fst
doc/dev_log/: dev_log.md
hw/: Makefile
hw/rtl/: falafel.sv  falafel_config_regs.sv  falafel_input_arbiter.sv  falafel_input_buffer.sv  falafel_input_parser.sv  falafel_lsu.sv  falafel_output_fsm.sv
hw/rtl/core/: falafel_block_parser.sv  falafel_core.sv  size_aligner.sv
hw/rtl/include/: dual_port_ram_wrapper.sv  falafel_pkg.sv
hw/rtl/include/fifos/: falafel_fifo.sv  falafel_fifo_internal.sv  fifo.sv  fifo_internal.sv
hw/sim/cocotb_common/: falafel_block.py  falafel_bus.py  falafel_pkg.py
hw/sim/integration_tests/: Makefile  falafel_wrapper.sv  test_falafel.py
hw/sim/unit_tests/: README.md  cocotb_falafel_core.py  cocotb_falafel_lsu.py  cocotb_fifo.py  cocotb_input_parser.py  test_top.py
sim/test/: Makefile  allocator.sv  allocator_pkg.sv  core.sv  core_wrapper.sv  lsu.sv  lsu_wrapper.sv  test_allocator.py
sw/: Makefile
sw/src/: main.c  malloc_freelist.c
sw/src/include/: linked_list.h  malloc_freelist.h
(+3 files in other folders)
